[package]
name = "lsip"
version = "0.0.2"
description = "list all IPs that are pingable"
repository = "https://github.com/manorajesh/lsip"
license-file = "LICENSE"
keywords = ["list", "ips", "network"]
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
mimalloc = { version = "0.1.34", default-features = false }
rayon = "1.7.0"

[profile.release]
lto = "fat"
codegen-units = 1
debug = 0
